[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Andrés Felipe Sierra Parra <cepfelo@gmail.com>"]
description = ""
name = "curso_python_EUD"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^6.1"
python = "^3.8"
[tool.poetry.dev-dependencies]
